Fix events table overflow issue

--- a/src/common/components/table/table.module.scss
+++ b/src/common/components/table/table.module.scss
@@ -12,6 +12,7 @@
 
     td,
     th {
+      box-sizing: border-box;
       text-align: left;
       padding: var(--spacing-xs) var(--spacing-s);
     }
